<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/simple_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple"/>

    <Button
        android:id="@+id/simple_actionbar_with_upbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_up"/>

    <!--split_action_bar crush application-->
    <Button
        android:id="@+id/split_action_bar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/split"/>

    <Button
        android:id="@+id/actionbar_with_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tabs"/>

    <Button
        android:id="@+id/actionbar_with_navigation_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list"/>

    <Button
        android:id="@+id/actionbar_with_custom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom"/>

    <Button
        android:id="@+id/actionbar_with_custom_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themed"/>

    <Button
        android:id="@+id/actionbar_with_action_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action"/>
</LinearLayout>
