<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RootActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/simple_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple"/>

        <Button
            android:id="@+id/simple_action_bar_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_up"/>

        <Button
            android:id="@+id/split_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/split"/>

        <Button
            android:id="@+id/action_bar_with_navigation_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tabs"/>

        <Button
            android:id="@+id/action_bar_with_navigation_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list"/>

        <Button
            android:id="@+id/action_bar_with_custom_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom"/>

        <Button
            android:id="@+id/action_bar_with_custom_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themed"/>

        <Button
            android:id="@+id/action_bar_with_action_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action"/>

    </LinearLayout>
</ScrollView>